# releasy

./: .dockerignore  .gitignore  .markdownlint.jsonc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  justfile  package-lock.json  package.json
crates/releasy-server/: Cargo.toml
crates/releasy-server/sql/: README.md
crates/releasy-server/sql/api_keys/: get_by_prefix.sql  insert.sql  revoke.sql  update_hash.sql  update_last_used.sql
crates/releasy-server/sql/artifacts/: get.sql  insert.sql  list_by_release.sql  list_by_releases.sql
crates/releasy-server/sql/audit/: insert.sql  list_base.sql
crates/releasy-server/sql/customers/: exists.sql  get.sql  insert.sql  list_base.sql  update.sql
crates/releasy-server/sql/download_tokens/: get_by_hash.sql  insert.sql
crates/releasy-server/sql/entitlements/: delete.sql  insert.sql  list_by_customer.sql  update.sql
crates/releasy-server/sql/idempotency/: delete.sql  get.sql  insert_base.sql  insert_postgres_suffix.sql  insert_sqlite.sql  update.sql
crates/releasy-server/sql/releases/: delete.sql  get.sql  insert.sql  list_base.sql  list_published_base.sql  update_status.sql
crates/releasy-server/src/: app.rs  auth.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  release.rs  test_support.rs  utils.rs
crates/releasy-server/src/auth/: admin.rs  api_keys.rs  jwks.rs
crates/releasy-server/src/db/: api_keys.rs  artifacts.rs  audit.rs  customers.rs  download_tokens.rs  entitlements.rs  mod.rs  (+5 more)
crates/releasy-server/tests/: integration_smoke.rs
(+91 files in other folders)
