[package]
name = "releasy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v4"] }
